# bestFitAl

./: CMakeLists.txt  Makefile  README.md  bt.csv  diag_scores.csv  kmer_counts.csv  scores.csv
src/: CMakeLists.txt  best_fit_al.cpp  std_fit_al.cpp  suffix_array.cpp  suffix_array.h
